--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "cors": "^2.8.5",
+        "@vercel/blob": "^0.23.3"
     }
 }
