--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-    "name": "avatar-mvp",
+    "name": "avatarmvp",
     "version": "1.0.0",
-    "description": "Avatar creation and interaction system",
-    "main": "server.js",
     "scripts": {
-        "start": "node server.js"
+      "dev": "vite",
+      "build": "vite build",
+      "preview": "vite preview"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "cors": "^2.8.5",
-        "@vercel/blob": "^0.23.3"
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+      "vite": "^5.0.0"
     }
-}
+  }
